# mwissues

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  main.py  pyproject.toml  repro_cli_commands.py  webapp.py
.scratch/: 011-json-import.md  012-json-import-validation.md  013-json-import-tests.md
docs/: prd-mwissues-cli.md
docs/TODO/: important-todo.md
docs/issues/: 00-mwissues-init.md  01-issue-crud.md  02-todo-management.md  03-tag-management.md  04-search.md  05-help-text.md
scripts/: stress_test.py
src/mwissues/: cli.py
templates/: base.html  edit_issue.html  index.html  issue.html  new_issue.html  view_issue.html
tests/: conftest.py  test_init.py  test_issue_crud.py  test_migration.py  test_tag_management.py  test_todos.py  test_web.py
