[project]
name = "mwissues"
version = "0.1.2"
description = "Issues Manager for LLM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "flask>=3.1.3",
    "markdown>=3.7",
]

[project.scripts]
mwissues = "mwissues.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mwissues = ["templates/*.html"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "click",
]
